W1 update add new Group member

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,7 @@
 <h1>W1</h1>
-<p>建立倉儲</p>
-<p>尋找組員:</p>
+<p>1.建立倉儲</p>
+<p>2.尋找組員:</p>
 <p>40823125 <a href="https://github.com/40823125/cd2021">倉儲</a> <a href="https://40823125.github.io/cd2021/">網頁</a></p>
+<p>40823110 <a href="https://github.com/40823110/cd2021">倉儲</a><span><span> </span></span><a href="https://40823110.github.io/cd2021/">網頁</a></p>
 <p>40823132<span> <a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
+<p><span>3.內容討論</span></p>
