W2 add&blog add

--- a/content/W2.html
+++ b/content/W2.html
@@ -133,14 +133,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
-<p>1.建立倉儲</p>
-<p>2.尋找組員:</p>
-<p>40823125 <a href="https://github.com/40823125/cd2021">倉儲</a> <a href="https://40823125.github.io/cd2021/">網頁</a></p>
-<p>40823110 <a href="https://github.com/40823110/cd2021">倉儲</a><span><span> </span></span><a href="https://40823110.github.io/cd2021/">網頁</a></p>
-<p>40823132<span> <a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
-<p></p>
-<br /> <a href='W2.html'>Next</a> >> W2</div>
+    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <br /><h1>W2</h1>
+<p><strong>內容討論:</strong></p>
+<p><span>stage1-ag14 發球機</span></p>
+<p><strong>製作動機:</strong><br/><span>因為我組有桌球社社長,他想要藉由發球機提供球員自主練習機會。</span></p>
+<p><strong>製作規劃:</strong><br/><span>第二周:繪製零件圖。</span><br/><span>第三周:用CoppeliaSim測試並修改。</span><br/><span>第四周:報告。</span></p>
+<p><strong>任務分配:</strong></p>
+<p>40823125<span> </span></p>
+<p>40823110 </p>
+<p>40823132</p><br />W1 << <a href='W1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
