--- a/content/index.html
+++ b/content/index.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a></li>
+                     <li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,13 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>W1</h1>
+    <div id="tipue_search_content"> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
 <p>1.建立倉儲</p>
 <p>2.尋找組員:</p>
 <p>40823125 <a href="https://github.com/40823125/cd2021">倉儲</a> <a href="https://40823125.github.io/cd2021/">網頁</a></p>
 <p>40823110 <a href="https://github.com/40823110/cd2021">倉儲</a><span><span> </span></span><a href="https://40823110.github.io/cd2021/">網頁</a></p>
 <p>40823132<span> <a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
-<p><span>3.內容討論</span></p><br /> </div>
+<p></p>
+<br /> <a href='W2.html'>Next</a> >> W2</div>
         
     <!-- footer -->
       <div class="container">
