--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -4,4 +4,16 @@
 <p>40823125 <a href="https://github.com/40823125/cd2021">倉儲</a> <a href="https://40823125.github.io/cd2021/">網頁</a></p>
 <p>40823110 <a href="https://github.com/40823110/cd2021">倉儲</a><span><span> </span></span><a href="https://40823110.github.io/cd2021/">網頁</a></p>
 <p>40823132<span> <a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
-<p><span>3.內容討論</span></p>
+<p></p>
+<h1>W2</h1>
+<p><strong>內容討論:</strong></p>
+<p><span>stage1-ag14 發球機</span></p>
+<p><strong>製作動機:</strong><br/><span>因為我組有桌球社社長,他想要藉由發球機提供球員自主練習機會。</span></p>
+<p><strong>製作規劃:</strong><br/><span>第二周:繪製零件圖。</span><br/><span>第三周:用CoppeliaSim測試並修改。</span><br/><span>第四周:報告。</span></p>
+<p><strong>任務分配:</strong></p>
+<p>40823125<span> CoppeliaSim測試</span></p>
+<p>40823110 製圖:<a href="https://cad.onshape.com/documents/b2fd841cc0d0a0eab0afe5cc/w/650cd44a013042653d1b995f/e/c1547cd791f26bbfc4276762">球體</a> </p>
+<p>                      </p>
+<p><span>                     </span></p>
+<p><span>                     </span></p>
+<p>40823132</p>
