--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -9,11 +9,15 @@
 <p><strong>內容討論:</strong></p>
 <p><span>stage1-ag14 發球機</span></p>
 <p><strong>製作動機:</strong><br/><span>因為我組有桌球社社長,他想要藉由發球機提供球員自主練習機會。</span></p>
-<p><strong>製作規劃:</strong><br/><span>第二周:繪製零件圖。</span><br/><span>第三周:用CoppeliaSim測試並修改。</span><br/><span>第四周:報告。</span></p>
+<p><strong>製作規劃:</strong><br/><span>第二周:繪製零件圖並組合。</span><br/><span>第三周:用CoppeliaSim測試並修改。</span><br/><span>第四周:報告。</span></p>
 <p><strong>任務分配:</strong></p>
-<p>40823125<span> CoppeliaSim測試</span></p>
-<p>40823110 製圖:<a href="https://cad.onshape.com/documents/b2fd841cc0d0a0eab0afe5cc/w/650cd44a013042653d1b995f/e/c1547cd791f26bbfc4276762">球體</a> </p>
-<p>                      </p>
-<p><span>                     </span></p>
-<p><span>                     </span></p>
-<p>40823132</p>
+<p>40823125:</p>
+<p><span>CoppeliaSim測試</span></p>
+<p><span>轉換為Inventor檔並組合<a href="/downloads/組合件.stl">組合件.stl</a>|<a href="/downloads/球體.stl">球體.stl</a>|<a href="/downloads/主體.stl">主體.stl</a>|<a href="/downloads/球桶.stl">球桶.stl</a>|<a href="/downloads/引球圓盤.stl">引球圓盤.stl</a></span></p>
+<p>40823110:</p>
+<p>製圖(Onshape):<a href="https://cad.onshape.com/documents/b2fd841cc0d0a0eab0afe5cc/w/650cd44a013042653d1b995f/e/c1547cd791f26bbfc4276762">球體</a>|<a href="https://cad.onshape.com/documents/5163181e2fe649a1d31dd674/w/4e88bfbfabd294ec7f2f2b4d/e/697be15fa1b7438b20521146">發球機主體</a>|<span><a href="https://cad.onshape.com/documents/e7f83d8dad44353fefca9ba8/w/c9bfde151271f69c6a6a2b1d/e/dfcfbb7a2da4266f925ff71c">球桶</a>|</span><span><a href="https://cad.onshape.com/documents/15e7b2b6610857fd978f626a/w/89c7066d9571d20450730429/e/4182c488ced799f50ceab2a3">引球圓盤</a></span></p>
+<p>40823132:</p>
+<h2>CoppeliaSim測試時的問題</h2>
+<p><strong>這個問題我想是因為主體的孔跟轉盤的軸接的太緊了</strong></p>
+<p><strong>我想只要把其中的一個修改一下就可以了吧</strong></p>
+<p><img alt="" height="187" src="/images/錯誤1.png" width="350"/></p>
