coppeliaSim模擬及簡報製作

--- a/config/content.htm
+++ b/config/content.htm
@@ -16,7 +16,11 @@
 <p><span>轉換為Inventor檔並組合<a href="/downloads/組合件.stl">組合件.stl</a>|<a href="/downloads/球體.stl">球體.stl</a>|<a href="/downloads/主體.stl">主體.stl</a>|<a href="/downloads/球桶.stl">球桶.stl</a>|<a href="/downloads/引球圓盤.stl">引球圓盤.stl</a></span></p>
 <p>40823110:</p>
 <p>製圖(Onshape):<a href="https://cad.onshape.com/documents/b2fd841cc0d0a0eab0afe5cc/w/650cd44a013042653d1b995f/e/c1547cd791f26bbfc4276762">球體</a>|<a href="https://cad.onshape.com/documents/5163181e2fe649a1d31dd674/w/4e88bfbfabd294ec7f2f2b4d/e/697be15fa1b7438b20521146">發球機主體</a>|<span><a href="https://cad.onshape.com/documents/e7f83d8dad44353fefca9ba8/w/c9bfde151271f69c6a6a2b1d/e/dfcfbb7a2da4266f925ff71c">球桶</a>|</span><span><a href="https://cad.onshape.com/documents/15e7b2b6610857fd978f626a/w/89c7066d9571d20450730429/e/4182c488ced799f50ceab2a3">引球圓盤</a></span></p>
-<p>40823132:</p><h2>CoppeliaSim測試時的問題</h2>
+<p>40823132:</p>
+<h2>coppeliaSim模擬影片</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/p66UvX3NPIU" width="560"></iframe></p>
+<p></p><h2>CoppeliaSim測試時的問題</h2>
 <p><strong>這個問題我想是因為主體的孔跟轉盤的軸接的太緊了</strong></p>
 <p><strong>我想只要把其中的一個修改一下就可以了吧</strong></p>
-<p><img alt="" height="187" src="/images/錯誤1.png" width="350"/></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GUHDy4NxUF4" width="560">
+<p></p></iframe><img alt="" height="267" src="/images/錯誤1.png" width="500"/></p>
