--- a/content/CoppeliaSim測試時的問題.html
+++ b/content/CoppeliaSim測試時的問題.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,10 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <br /><h1>CoppeliaSim測試時的問題</h1>
+    <div id="tipue_search_content">coppeliaSim模擬影片 << <a href='coppeliaSim模擬影片.html'>Previous</a> <br /><h1>CoppeliaSim測試時的問題</h1>
 <p><strong>這個問題我想是因為主體的孔跟轉盤的軸接的太緊了</strong></p>
 <p><strong>我想只要把其中的一個修改一下就可以了吧</strong></p>
-<p><img alt="" height="187" src="./../images/錯誤1.png" width="350"/></p><br />W2 << <a href='W2.html'>Previous</a> </div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GUHDy4NxUF4" width="560">
+<p></p></iframe><img alt="" height="267" src="./../images/錯誤1.png" width="500"/></p><br />coppeliaSim模擬影片 << <a href='coppeliaSim模擬影片.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
