--- a/content/index.html
+++ b/content/index.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li>
                       </ul>
                 </nav>
               </div>
