--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -17,10 +17,15 @@
 <p>40823110:</p>
 <p>製圖(Onshape):<a href="https://cad.onshape.com/documents/b2fd841cc0d0a0eab0afe5cc/w/650cd44a013042653d1b995f/e/c1547cd791f26bbfc4276762">球體</a>|<a href="https://cad.onshape.com/documents/5163181e2fe649a1d31dd674/w/4e88bfbfabd294ec7f2f2b4d/e/697be15fa1b7438b20521146">發球機主體</a>|<span><a href="https://cad.onshape.com/documents/e7f83d8dad44353fefca9ba8/w/c9bfde151271f69c6a6a2b1d/e/dfcfbb7a2da4266f925ff71c">球桶</a>|</span><span><a href="https://cad.onshape.com/documents/15e7b2b6610857fd978f626a/w/89c7066d9571d20450730429/e/4182c488ced799f50ceab2a3">引球圓盤</a></span></p>
 <p>40823132:</p>
-<h2>coppeliaSim模擬影片</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/p66UvX3NPIU" width="560"></iframe></p>
-<p></p><h2>CoppeliaSim測試時的問題</h2>
-<p><strong>這個問題我想是因為主體的孔跟轉盤的軸接的太緊了</strong></p>
-<p><strong>我想只要把其中的一個修改一下就可以了吧</strong></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GUHDy4NxUF4" width="560">
-<p></p></iframe><img alt="" height="267" src="/images/錯誤1.png" width="500"/></p>
+<p>PDF製作</p>
+<h2>發球機修改物件</h2><h2>coppeliaSim模擬影片</h2>
+<p><a href="https://www.youtube.com/redirect?event=video_description&amp;redir_token=QUFFLUhqbjNiNFE5N0Z4RTJOY2x4TWhyVWZyeW1nbEV4Z3xBQ3Jtc0ttcVdXQUxYUUtiWHFrUXJLaVdCY05zRVNMdjhuZXdhVHlIVzFZYWMzNU4wc2xOamh4N2RDbFhZVWZqbGpUSnR6VmJYVkx3T0kwMTFZeUg0XzN4akV3S0hxYWg4TndRaEV6dzQxdXNFN1BreWpkeU1KVQ&amp;q=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1RdYJgX-CONyUPgHzvj-qGBmiZoA7tIm9%2Fview%3Fusp%3Dsharing">發射滾輪測試</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/p66UvX3NPIU" width="560"></iframe></p><h2>CoppeliaSim測試時的問題</h2>
+<p><strong>這個問題我有兩個猜測:</strong></p>
+<ol>
+<li><strong>我認為是因為主體的孔跟轉盤的軸接的太緊了，也許</strong><strong>只要把其中的一個修改的小一點就可以了</strong></li>
+<li><strong>我認為是轉盤的軸跟轉盤是一體的所以導致轉盤的軸跟coppeliaSim的軸衝突導致,也許<strong>只要把轉盤跟軸分開就可以了</strong></strong><strong><strong></strong></strong></li>
+</ol>
+<p><strong><a href="https://www.youtube.com/redirect?event=video_description&amp;redir_token=QUFFLUhqbnprQUw1QnFtYTNHZEZoQnd3U25BWG9CM0JpUXxBQ3Jtc0tuZFpWZUFycGFTeDVnNTNRa1ozekZJLU1JTy1NMjd0bUJteDBxSmh6VmdWQnJ6VmpWal84VjlRS0xWdk5fV3BuRUJ0cE1HRUthemN0bmdPbVZPNWFXX3dRUmIxb0UzdGxzdGhRaVE4WjdLMDZhSnNfaw&amp;q=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1h-w_S60VLdSOlxDe9UeUbPbxfoGVpjHd%2Fview%3Fusp%3Dsharing">圓盤與主體的錯誤</a></strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GUHDy4NxUF4" width="560">
+<p></p></iframe><img alt="" height="267" src="/images/錯誤1.png" width="500"/></p><h1>分組開會紀錄</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dLK8QT6gpw8" width="560"></iframe></p>
