--- a/reveal/index.html
+++ b/reveal/index.html
@@ -50,19 +50,21 @@
             </section>
             <section>
                 <p>40823132:</p>
+                <p>PDF製作</p>
             </section>
         </section>
         <section>
         <h2>coppeliaSim模擬影片</h2>
         <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="//www.youtube.com/embed/p66UvX3NPIU"></iframe></p>
-        <p></p>
         </section>
 
         <section>
             <section>
                 <h2>CoppeliaSim測試時的問題</h2>
-                <p>這個問題我想是因為主體的孔跟轉盤的軸接的太緊了</p>
-                <p>我想只要把其中的一個修改一下就可以了吧</p>
+                <p><strong>這個問題我有兩個猜測:</strong></p>
+            <ol>
+            <li><strong>我認為是因為主體的孔跟轉盤的軸接的太緊了，也許</strong><strong>只要把其中的一個修改的小一點就可以了</strong></li>
+            <li><strong>我認為是轉盤的軸跟轉盤是一體的所以導致轉盤的軸跟coppeliaSim的軸衝突導致,也許<strong>只要把轉盤跟軸分開就可以了</strong></strong><strong><strong></strong></strong></li>
                 </p></iframe><img src="/images/錯誤1.png" alt="" width="500" height="267"></p>
             </section>
             <section>
@@ -70,6 +72,10 @@
             </section>
         </section>
 
+        <section>
+        <h1>分組開會紀錄</h1>
+        <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="//www.youtube.com/embed/dLK8QT6gpw8"></iframe></p>
+        </section>
     </div>
 </div>
     <script src="dist/reveal.js"></script>
