--- a/content/CoppeliaSim測試時的問題.html
+++ b/content/CoppeliaSim測試時的問題.html
@@ -102,14 +102,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>40823125 協同產品設計實習 (cd2021)</h1>
+                <h1>40823125 協同產品設計實習 (cd2021-1)</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40823125 協同產品設計實習 (cd2021)</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40823125 協同產品設計實習 (cd2021-1)</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='發球機修改物件.html'>發球機修改物件</a><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,11 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">coppeliaSim模擬影片 << <a href='coppeliaSim模擬影片.html'>Previous</a> <br /><h1>CoppeliaSim測試時的問題</h1>
-<p><strong>這個問題我想是因為主體的孔跟轉盤的軸接的太緊了</strong></p>
-<p><strong>我想只要把其中的一個修改一下就可以了吧</strong></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GUHDy4NxUF4" width="560">
-<p></p></iframe><img alt="" height="267" src="./../images/錯誤1.png" width="500"/></p><br />coppeliaSim模擬影片 << <a href='coppeliaSim模擬影片.html'>Previous</a> </div>
+    <div id="tipue_search_content">coppeliaSim模擬影片 << <a href='coppeliaSim模擬影片.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄<br /><h1>CoppeliaSim測試時的問題</h1>
+<p><strong>這個問題我有兩個猜測:</strong></p>
+<ol>
+<li><strong>我認為是因為主體的孔跟轉盤的軸接的太緊了，也許</strong><strong>只要把其中的一個修改的小一點就可以了</strong></li>
+<li><strong>我認為是轉盤的軸跟轉盤是一體的所以導致轉盤的軸跟coppeliaSim的軸衝突導致,也許<strong>只要把轉盤跟軸分開就可以了</strong></strong><strong><strong></strong></strong></li>
+</ol>
+<p><strong><a href="https://www.youtube.com/redirect?event=video_description&amp;redir_token=QUFFLUhqbnprQUw1QnFtYTNHZEZoQnd3U25BWG9CM0JpUXxBQ3Jtc0tuZFpWZUFycGFTeDVnNTNRa1ozekZJLU1JTy1NMjd0bUJteDBxSmh6VmdWQnJ6VmpWal84VjlRS0xWdk5fV3BuRUJ0cE1HRUthemN0bmdPbVZPNWFXX3dRUmIxb0UzdGxzdGhRaVE4WjdLMDZhSnNfaw&amp;q=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1h-w_S60VLdSOlxDe9UeUbPbxfoGVpjHd%2Fview%3Fusp%3Dsharing">圓盤與主體的錯誤</a></strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GUHDy4NxUF4" width="560">
+<p></p></iframe><img alt="" height="267" src="./../images/錯誤1.png" width="500"/></p><br />coppeliaSim模擬影片 << <a href='coppeliaSim模擬影片.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
         
     <!-- footer -->
       <div class="container">
