--- a/content/W2.html
+++ b/content/W2.html
@@ -102,14 +102,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>40823125 協同產品設計實習 (cd2021)</h1>
+                <h1>40823125 協同產品設計實習 (cd2021-1)</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40823125 協同產品設計實習 (cd2021)</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40823125 協同產品設計實習 (cd2021-1)</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='發球機修改物件.html'>發球機修改物件</a><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='coppeliaSim模擬影片.html'>Next</a> >> coppeliaSim模擬影片<br /><h1>W2</h1>
+    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='發球機修改物件.html'>Next</a> >> 發球機修改物件<br /><h1>W2</h1>
 <p><strong>內容討論:</strong></p>
 <p><span>stage1-ag14 發球機</span></p>
 <p><strong>製作動機:</strong><br/><span>因為我們的組原有一個人是桌球社社長,他想要藉由發球機提供球員自主練習機會。</span></p>
@@ -145,7 +145,8 @@ img.add_border {
 <p>40823110:</p>
 <p>製圖(Onshape):<a href="https://cad.onshape.com/documents/b2fd841cc0d0a0eab0afe5cc/w/650cd44a013042653d1b995f/e/c1547cd791f26bbfc4276762">球體</a>|<a href="https://cad.onshape.com/documents/5163181e2fe649a1d31dd674/w/4e88bfbfabd294ec7f2f2b4d/e/697be15fa1b7438b20521146">發球機主體</a>|<span><a href="https://cad.onshape.com/documents/e7f83d8dad44353fefca9ba8/w/c9bfde151271f69c6a6a2b1d/e/dfcfbb7a2da4266f925ff71c">球桶</a>|</span><span><a href="https://cad.onshape.com/documents/15e7b2b6610857fd978f626a/w/89c7066d9571d20450730429/e/4182c488ced799f50ceab2a3">引球圓盤</a></span></p>
 <p>40823132:</p>
-<br />W1 << <a href='W1.html'>Previous</a> <a href='coppeliaSim模擬影片.html'>Next</a> >> coppeliaSim模擬影片</div>
+<p>PDF製作</p>
+<br />W1 << <a href='W1.html'>Previous</a> <a href='發球機修改物件.html'>Next</a> >> 發球機修改物件</div>
         
     <!-- footer -->
       <div class="container">
