--- a/content/球.html
+++ b/content/球.html
@@ -133,9 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">球 << <a href='球.html'>Previous</a> <a href='CoppeliaSim測試時的問題.html'>Next</a> >> CoppeliaSim測試時的問題<br /><h1>coppeliaSim模擬影片</h1>
-<p><a href="https://www.youtube.com/redirect?event=video_description&amp;redir_token=QUFFLUhqbjNiNFE5N0Z4RTJOY2x4TWhyVWZyeW1nbEV4Z3xBQ3Jtc0ttcVdXQUxYUUtiWHFrUXJLaVdCY05zRVNMdjhuZXdhVHlIVzFZYWMzNU4wc2xOamh4N2RDbFhZVWZqbGpUSnR6VmJYVkx3T0kwMTFZeUg0XzN4akV3S0hxYWg4TndRaEV6dzQxdXNFN1BreWpkeU1KVQ&amp;q=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1RdYJgX-CONyUPgHzvj-qGBmiZoA7tIm9%2Fview%3Fusp%3Dsharing">發射滾輪測試</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/p66UvX3NPIU" width="560"></iframe></p><br />球 << <a href='球.html'>Previous</a> <a href='CoppeliaSim測試時的問題.html'>Next</a> >> CoppeliaSim測試時的問題</div>
+    <div id="tipue_search_content">球桶 << <a href='球桶.html'>Previous</a> <a href='coppeliaSim模擬影片.html'>Next</a> >> coppeliaSim模擬影片<br /><h1>球</h1>
+<p><img alt="" height="247" src="https://40823125.github.io/cd2021/images/%E7%90%83.png" width="250"/></p><br />球桶 << <a href='球桶.html'>Previous</a> <a href='coppeliaSim模擬影片.html'>Next</a> >> coppeliaSim模擬影片</div>
         
     <!-- footer -->
       <div class="container">
