--- a/reveal/index.html
+++ b/reveal/index.html
@@ -65,7 +65,7 @@
             <ol>
             <li><strong>我認為是因為主體的孔跟轉盤的軸接的太緊了，也許</strong><strong>只要把其中的一個修改的小一點就可以了</strong></li>
             <li><strong>我認為是轉盤的軸跟轉盤是一體的所以導致轉盤的軸跟coppeliaSim的軸衝突導致,也許<strong>只要把轉盤跟軸分開就可以了</strong></strong><strong><strong></strong></strong></li>
-                </p></iframe><img src="/images/錯誤1.png" alt="" width="500" height="267"></p>
+                </p></iframe><img src="./../images/錯誤1.png" alt="" width="500" height="267"></p>
             </section>
             <section>
                 <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="//www.youtube.com/embed/GUHDy4NxUF4"></iframe></p>
