reveal&發球機連結 update

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -28,8 +28,8 @@
             <a href="https://revealjs.com">
                 <img src="https://static.slid.es/reveal/logo-v1/reveal-white-text.svg" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
             </a>
+            <h3>協同產品設計實習</h3>
         </section>
-
         <!-- Example of nested vertical slides -->
         <section>
             <section>
@@ -65,16 +65,32 @@
             <ol>
             <li><strong>我認為是因為主體的孔跟轉盤的軸接的太緊了，也許</strong><strong>只要把其中的一個修改的小一點就可以了</strong></li>
             <li><strong>我認為是轉盤的軸跟轉盤是一體的所以導致轉盤的軸跟coppeliaSim的軸衝突導致,也許<strong>只要把轉盤跟軸分開就可以了</strong></strong><strong><strong></strong></strong></li>
-                </p></iframe><img src="./../images/錯誤1.png" alt="" width="500" height="267"></p>
             </section>
             <section>
-                <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="//www.youtube.com/embed/GUHDy4NxUF4"></iframe></p>
+                <p><img alt="" height="350" src="./../images/錯誤1.png" width="600"></p>
+            </section>
+            <section>
+                <p><iframe width="600" height="350" allowfullscreen="allowfullscreen" src="//www.youtube.com/embed/GUHDy4NxUF4"></iframe></p>
             </section>
         </section>
 
         <section>
+            <section>
+            <h3>主體</h3>
+            <p><img alt="" height="235" src="./../images/主體-4.png" width="350"></p>
+            </section>
+            <section>
+            <h3>引球圓盤</h3>
+            <p><img alt="" height="235" src="/./../images/引球圓盤-2.png" width="350"></p>
+            </section>
+            <section>
+            <h3>球桶</h3>
+            <p><img alt="" height="235" src="./../images/球桶-1.png" width="350"></p>
+            </section>
+        </section>
+        <section>
         <h1>分組開會紀錄</h1>
-        <p><iframe width="560" height="314" allowfullscreen="allowfullscreen" src="//www.youtube.com/embed/dLK8QT6gpw8"></iframe></p>
+        <p><iframe width="600" height="350" allowfullscreen="allowfullscreen" src="//www.youtube.com/embed/dLK8QT6gpw8"></iframe></p>
         </section>
     </div>
 </div>
