--- a/content/CoppeliaSim測試時的問題.html
+++ b/content/CoppeliaSim測試時的問題.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='發球機修改物件.html'>發球機修改物件</a><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a></li>
                       </ul>
                 </nav>
               </div>
@@ -136,11 +136,15 @@ img.add_border {
     <div id="tipue_search_content">coppeliaSim模擬影片 << <a href='coppeliaSim模擬影片.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄<br /><h1>CoppeliaSim測試時的問題</h1>
 <p><strong>這個問題我有兩個猜測:</strong></p>
 <ol>
+<ol>
 <li><strong>我認為是因為主體的孔跟轉盤的軸接的太緊了，也許</strong><strong>只要把其中的一個修改的小一點就可以了</strong></li>
-<li><strong>我認為是轉盤的軸跟轉盤是一體的所以導致轉盤的軸跟coppeliaSim的軸衝突導致,也許<strong>只要把轉盤跟軸分開就可以了</strong></strong><strong><strong></strong></strong></li>
+<li><strong>我認為是轉盤的軸跟轉盤是一體的所以導致轉盤的軸跟coppeliaSim的軸衝突導致,也許<strong>只要把轉盤跟軸分開就可以了</strong></strong></li>
 </ol>
-<p><strong><a href="https://www.youtube.com/redirect?event=video_description&amp;redir_token=QUFFLUhqbnprQUw1QnFtYTNHZEZoQnd3U25BWG9CM0JpUXxBQ3Jtc0tuZFpWZUFycGFTeDVnNTNRa1ozekZJLU1JTy1NMjd0bUJteDBxSmh6VmdWQnJ6VmpWal84VjlRS0xWdk5fV3BuRUJ0cE1HRUthemN0bmdPbVZPNWFXX3dRUmIxb0UzdGxzdGhRaVE4WjdLMDZhSnNfaw&amp;q=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1h-w_S60VLdSOlxDe9UeUbPbxfoGVpjHd%2Fview%3Fusp%3Dsharing">圓盤與主體的錯誤</a></strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GUHDy4NxUF4" width="560">
-<p></p></iframe><img alt="" height="267" src="./../images/錯誤1.png" width="500"/></p><br />coppeliaSim模擬影片 << <a href='coppeliaSim模擬影片.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
+</ol>
+<p><a href="https://drive.google.com/file/d/1h-w_S60VLdSOlxDe9UeUbPbxfoGVpjHd/view?usp=sharing">圓盤與主體的錯誤</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GUHDy4NxUF4" width="560"></iframe></p>
+<p><img alt="" height="267" src="./../images/錯誤1.png" width="500"/></p>
+<br />coppeliaSim模擬影片 << <a href='coppeliaSim模擬影片.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
         
     <!-- footer -->
       <div class="container">
