--- a/content/W1.html
+++ b/content/W1.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='發球機修改物件.html'>發球機修改物件</a><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a></li>
                       </ul>
                 </nav>
               </div>
@@ -136,10 +136,9 @@ img.add_border {
     <div id="tipue_search_content"> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
 <p>1.建立倉儲</p>
 <p>2.尋找組員:</p>
-<p>40823125 <a href="https://github.com/40823125/cd2021">倉儲</a> <a href="https://40823125.github.io/cd2021/">網頁</a></p>
+<p>40823125<span> </span><a href="https://github.com/40823125/cd2021">倉儲</a><span> </span><a href="https://40823125.github.io/cd2021/">網頁</a></p>
 <p>40823110 <a href="https://github.com/40823110/cd2021">倉儲</a><span><span> </span></span><a href="https://40823110.github.io/cd2021/">網頁</a></p>
-<p>40823132<span> <a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
-<p></p>
+<p>40823132<span><span> </span><a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
 <br /> <a href='W2.html'>Next</a> >> W2</div>
         
     <!-- footer -->
