--- a/content/coppeliaSim模擬影片.html
+++ b/content/coppeliaSim模擬影片.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='發球機修改物件.html'>發球機修改物件</a><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">球 << <a href='球.html'>Previous</a> <a href='CoppeliaSim測試時的問題.html'>Next</a> >> CoppeliaSim測試時的問題<br /><h1>coppeliaSim模擬影片</h1>
-<p><a href="https://www.youtube.com/redirect?event=video_description&amp;redir_token=QUFFLUhqbjNiNFE5N0Z4RTJOY2x4TWhyVWZyeW1nbEV4Z3xBQ3Jtc0ttcVdXQUxYUUtiWHFrUXJLaVdCY05zRVNMdjhuZXdhVHlIVzFZYWMzNU4wc2xOamh4N2RDbFhZVWZqbGpUSnR6VmJYVkx3T0kwMTFZeUg0XzN4akV3S0hxYWg4TndRaEV6dzQxdXNFN1BreWpkeU1KVQ&amp;q=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1RdYJgX-CONyUPgHzvj-qGBmiZoA7tIm9%2Fview%3Fusp%3Dsharing">發射滾輪測試</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/p66UvX3NPIU" width="560"></iframe></p><br />球 << <a href='球.html'>Previous</a> <a href='CoppeliaSim測試時的問題.html'>Next</a> >> CoppeliaSim測試時的問題</div>
+<p><a href="https://drive.google.com/file/d/1RdYJgX-CONyUPgHzvj-qGBmiZoA7tIm9/view?usp=sharing">發射滾輪測試</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/p66UvX3NPIU" width="560"></iframe></p>
+<br />球 << <a href='球.html'>Previous</a> <a href='CoppeliaSim測試時的問題.html'>Next</a> >> CoppeliaSim測試時的問題</div>
         
     <!-- footer -->
       <div class="container">
