--- a/content/引球圓盤.html
+++ b/content/引球圓盤.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='發球機修改物件.html'>發球機修改物件</a><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,9 +134,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">主體 << <a href='主體.html'>Previous</a> <a href='球桶.html'>Next</a> >> 球桶<br /><h1>引球圓盤</h1>
-<p><img alt="" height="88" src="https://40823125.github.io/cd2021/images/%E5%BC%95%E7%90%83%E5%9C%93%E7%9B%A4-1.png" width="350"/></p>
-<p><img alt="" height="265" src="https://40823125.github.io/cd2021/images/%E5%BC%95%E7%90%83%E5%9C%93%E7%9B%A4-2.png" width="350"/></p>
-<p><img alt="" height="313" src="https://40823125.github.io/cd2021/images/%E5%BC%95%E7%90%83%E5%9C%93%E7%9B%A4-3.png" width="350"/></p>
+<p><img alt="" height="88" src="./../images/引球圓盤-1.png" width="350"/></p>
+<p><img alt="" height="265" src="./../images/引球圓盤-2.png" width="350"/></p>
+<p><img alt="" height="313" src="./../images/引球圓盤-3.png" width="350"/></p>
 <br />主體 << <a href='主體.html'>Previous</a> <a href='球桶.html'>Next</a> >> 球桶</div>
         
     <!-- footer -->
