--- a/content/球桶.html
+++ b/content/球桶.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='發球機修改物件.html'>發球機修改物件</a><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='coppeliaSim模擬影片.html'>coppeliaSim模擬影片</a><li><a href='CoppeliaSim測試時的問題.html'>CoppeliaSim測試時的問題</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">引球圓盤 << <a href='引球圓盤.html'>Previous</a> <a href='球.html'>Next</a> >> 球<br /><h1>球桶</h1>
-<p><img alt="" height="254" src="https://40823125.github.io/cd2021/images/%E7%90%83%E6%A1%B6-1.png" width="350"/></p>
-<p><img alt="" height="322" src="https://40823125.github.io/cd2021/images/%E7%90%83%E6%A1%B6-2.png" width="350"/></p>
+<p><img alt="" height="254" src="./../images/球桶-1.png" width="350"/></p>
+<p><img alt="" height="322" src="./../images/球桶-2.png" width="350"/></p>
 <br />引球圓盤 << <a href='引球圓盤.html'>Previous</a> <a href='球.html'>Next</a> >> 球</div>
         
     <!-- footer -->
