--- a/content/第1版.html
+++ b/content/第1版.html
@@ -133,12 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">零件尺寸及示意圖 << <a href='零件尺寸及示意圖.html'>Previous</a> <a href='引球圓盤.html'>Next</a> >> 引球圓盤<br /><h1>主體</h1>
-<p><img alt="" height="235" src="./../images/主體-4.png" width="350"/></p>
-<p><img alt="" height="300" src="./../images/主體-1.png" width="350"/></p>
-<p><img alt="" height="269" src="./../images/主體-2.png" width="350"/></p>
-<p><img alt="" height="246" src="./../images/主體-3.png" width="350"/></p>
-<br />零件尺寸及示意圖 << <a href='零件尺寸及示意圖.html'>Previous</a> <a href='引球圓盤.html'>Next</a> >> 引球圓盤</div>
+    <div id="tipue_search_content">發球機版本 << <a href='發球機版本.html'>Previous</a> <a href='第2版.html'>Next</a> >> 第2版<br /><h1>第1版</h1>
+<p><marquee behavior="alternate" direction="down" height="35" scrollamount="1"><a href="./../downloads/組合件.stl">組合件.stl</a>|<a href="./../downloads/球體.stl">球體.stl</a>|<a href="./../downloads/主體.stl">主體.stl</a>|<a href="./../downloads/球桶.stl">球桶.stl</a>|<a href="./../downloads/引球圓盤.stl">引球圓盤.stl</a></marquee></p>
+<br />發球機版本 << <a href='發球機版本.html'>Previous</a> <a href='第2版.html'>Next</a> >> 第2版</div>
         
     <!-- footer -->
       <div class="container">
