--- a/content/第2版.html
+++ b/content/第2版.html
@@ -133,12 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">零件尺寸及示意圖 << <a href='零件尺寸及示意圖.html'>Previous</a> <a href='引球圓盤.html'>Next</a> >> 引球圓盤<br /><h1>主體</h1>
-<p><img alt="" height="235" src="./../images/主體-4.png" width="350"/></p>
-<p><img alt="" height="300" src="./../images/主體-1.png" width="350"/></p>
-<p><img alt="" height="269" src="./../images/主體-2.png" width="350"/></p>
-<p><img alt="" height="246" src="./../images/主體-3.png" width="350"/></p>
-<br />零件尺寸及示意圖 << <a href='零件尺寸及示意圖.html'>Previous</a> <a href='引球圓盤.html'>Next</a> >> 引球圓盤</div>
+    <div id="tipue_search_content">第1版 << <a href='第1版.html'>Previous</a> <br /><h1>第2版</h1>
+<p><marquee behavior="alternate" direction="up" height="30" scrollamount="1"><a href="./../downloads/引球圓盤-2.stl">引球圓盤-2.stl</a>|<a href="./../downloads/發球機主體-2.stl">發球機主體-2.stl</a></marquee></p><br />第1版 << <a href='第1版.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
