--- a/content/W7.html
+++ b/content/W7.html
@@ -133,15 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第3版 << <a href='第3版.html'>Previous</a> <a href='第5版.html'>Next</a> >> 第5版<br /><h1>第4版</h1>
-<p><marquee behavior="alternate" direction="down" height="35" scrollamount="1"><a href="./../downloads/組合圖-4.stl">組合圖-4.stl</a>|<a href="./../downloads/軸承-4.stl">軸承-4.stl</a></marquee></p>
-<p><a href="https://drive.google.com/file/d/1B8iossbDZBjO3TzLTAwdVh5GZbnrD1Vg/view?usp=sharing">發球機-4.ttt</a></p>
-<p><a href="https://drive.google.com/file/d/1qfLpAu2GxdC1gHiTFI4z8q3CFVKeD7Fy/view?usp=sharing">發球機-4-1.ttt</a></p>
-<p>我們將軸加長後，引球圓盤就可以正常轉動了</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bHb0nsadlYw" width="560"></iframe></p>
-<p>但是在要將球完整的引導至發球機的軌道裡，會不斷跳動</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ifhj4b9HIeQ" width="560"></iframe></p>
-<br />第3版 << <a href='第3版.html'>Previous</a> <a href='第5版.html'>Next</a> >> 第5版</div>
+    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='Heroku 網站建立.html'>Next</a> >> Heroku 網站建立<br /><h1>W7</h1>
+<br />W6 << <a href='W6.html'>Previous</a> <a href='Heroku 網站建立.html'>Next</a> >> Heroku 網站建立</div>
         
     <!-- footer -->
       <div class="container">
