--- a/content/stage2-ag12.html
+++ b/content/stage2-ag12.html
@@ -133,15 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第3版 << <a href='第3版.html'>Previous</a> <a href='第5版.html'>Next</a> >> 第5版<br /><h1>第4版</h1>
-<p><marquee behavior="alternate" direction="down" height="35" scrollamount="1"><a href="./../downloads/組合圖-4.stl">組合圖-4.stl</a>|<a href="./../downloads/軸承-4.stl">軸承-4.stl</a></marquee></p>
-<p><a href="https://drive.google.com/file/d/1B8iossbDZBjO3TzLTAwdVh5GZbnrD1Vg/view?usp=sharing">發球機-4.ttt</a></p>
-<p><a href="https://drive.google.com/file/d/1qfLpAu2GxdC1gHiTFI4z8q3CFVKeD7Fy/view?usp=sharing">發球機-4-1.ttt</a></p>
-<p>我們將軸加長後，引球圓盤就可以正常轉動了</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bHb0nsadlYw" width="560"></iframe></p>
-<p>但是在要將球完整的引導至發球機的軌道裡，會不斷跳動</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ifhj4b9HIeQ" width="560"></iframe></p>
-<br />第3版 << <a href='第3版.html'>Previous</a> <a href='第5版.html'>Next</a> >> 第5版</div>
+    <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>stage2-ag12</h1>
+<p><a href="https://40823152.github.io/stage2-ag12/content/index.html">stage2-ag12</a></p>
+<p>組員</p>
+<p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span>|<span> </span></span><a href="http://40823152.github.io/cd2021">40823152 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span>|<span> </span></span><a href="http://40823125.github.io/cd2021">40823125 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a></p>
+<br />W5 << <a href='W5.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
         
     <!-- footer -->
       <div class="container">
