--- a/content/W4.html
+++ b/content/W4.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a><li><a href='PDF.html'>PDF</a></li></ul><li><a href='W4.html'>W4</a><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a><li><a href='PDF.html'>PDF</a></li></ul><li><a href='W4.html'>W4</a><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本四.html'>版本四</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">PDF << <a href='PDF.html'>Previous</a> <a href='發球機版本.html'>Next</a> >> 發球機版本<br /><h1>W4</h1>
+    <div id="tipue_search_content">PDF << <a href='PDF.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>W4</h1>
 <p><a href="./../downloads/2021-03_2a_stage.7z">2021-03_2a_stage.7z</a></p>
-<p><a href="./../downloads/Ant Renamer.7z">Ant Renamer.7z</a></p><br />PDF << <a href='PDF.html'>Previous</a> <a href='發球機版本.html'>Next</a> >> 發球機版本</div>
+<p><a href="./../downloads/Ant Renamer.7z">Ant Renamer.7z</a></p>
+<br />PDF << <a href='PDF.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
         
     <!-- footer -->
       <div class="container">
