--- a/content/版本四.html
+++ b/content/版本四.html
@@ -133,15 +133,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第3版 << <a href='第3版.html'>Previous</a> <a href='第5版.html'>Next</a> >> 第5版<br /><h1>第4版</h1>
-<p><marquee behavior="alternate" direction="down" height="35" scrollamount="1"><a href="./../downloads/組合圖-4.stl">組合圖-4.stl</a>|<a href="./../downloads/軸承-4.stl">軸承-4.stl</a></marquee></p>
-<p><a href="https://drive.google.com/file/d/1B8iossbDZBjO3TzLTAwdVh5GZbnrD1Vg/view?usp=sharing">發球機-4.ttt</a></p>
-<p><a href="https://drive.google.com/file/d/1qfLpAu2GxdC1gHiTFI4z8q3CFVKeD7Fy/view?usp=sharing">發球機-4-1.ttt</a></p>
-<p>我們將軸加長後，引球圓盤就可以正常轉動了</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bHb0nsadlYw" width="560"></iframe></p>
-<p>但是在要將球完整的引導至發球機的軌道裡，會不斷跳動</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ifhj4b9HIeQ" width="560"></iframe></p>
-<br />第3版 << <a href='第3版.html'>Previous</a> <a href='第5版.html'>Next</a> >> 第5版</div>
+    <div id="tipue_search_content">籃球機版本 << <a href='籃球機版本.html'>Previous</a> <br /><h1>版本四</h1>
+<p><a href="https://drive.google.com/drive/folders/1GhgbMJbaKh2e0Zb0xjlF-sdGHJVy5C8D?usp=sharing">籃球機 4</a></p>
+<p><a href="https://drive.google.com/file/d/1vWfztZrbkWKIqTI-B5sKLRIM5YI0OJST/view?usp=sharing">coppeliaSim模擬:版本4</a></p>
+<p><span>因為版本2在</span><span>coppeliaSim裡被自動放大10倍，所以版本3無法擊中籃框，所以在<span>coppeliaSim裡</span>版本4放大10後就能擊中籃框。</span></p>
+<p><img alt="" height="350" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4.jpg" width="700"/></p>
+<p></p>
+<p>因為版本2在<span>coppeliaSim裡被自動放大10倍，所以版本3無法擊中籃框，所以版本4放大10後就能擊中籃框。</span></p>
+<p>可調性</p>
+<p><img caption="false" height="450" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4%E8%AA%BF%E5%B0%BA%E5%AF%B8%20.jpg" width="700"/></p>
+<p></p>
+<p><img caption="false" height="450" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4%E8%AA%BF%E5%B0%BA%E5%AF%B82%20.jpg" width="700"/></p>
+<p></p>
+<p></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/y-ztP91swPs" width="560"></iframe></p><br />籃球機版本 << <a href='籃球機版本.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
