--- a/content/版本一.html
+++ b/content/版本一.html
@@ -133,9 +133,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄<br /><h1>球</h1>
-<p><img alt="" height="247" src="./../images/球.png" width="250"/></p>
-<br />球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
+    <div id="tipue_search_content">籃球機版本 << <a href='籃球機版本.html'>Previous</a> <a href='版本二.html'>Next</a> >> 版本二<br /><h1>版本一</h1>
+<p><a href="https://drive.google.com/drive/folders/1GhgbMJbaKh2e0Zb0xjlF-sdGHJVy5C8D?usp=sharing">籃球機 1.4</a></p>
+<p><a href="https://drive.google.com/file/d/1vWfztZrbkWKIqTI-B5sKLRIM5YI0OJST/view?usp=sharing">coppeliaSim模擬:版本1.4</a></p>
+<p><span>因為版本2在</span><span>coppeliaSim裡被自動放大10倍，所以版本3無法擊中籃框，所以在<span>coppeliaSim裡</span>版本4放大10後就能擊中籃框。</span></p>
+<p><img alt="" height="350" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4.jpg" width="700"/></p>
+<p></p>
+<p>因為版本2在<span>coppeliaSim裡被自動放大10倍，所以版本3無法擊中籃框，所以版本4放大10後就能擊中籃框。</span></p>
+<p>可調性</p>
+<p><img caption="false" height="450" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4%E8%AA%BF%E5%B0%BA%E5%AF%B8%20.jpg" width="700"/></p>
+<p></p>
+<p><img caption="false" height="450" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4%E8%AA%BF%E5%B0%BA%E5%AF%B82%20.jpg" width="700"/></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/y-ztP91swPs" width="560"></iframe></p>
+<br />籃球機版本 << <a href='籃球機版本.html'>Previous</a> <a href='版本二.html'>Next</a> >> 版本二</div>
         
     <!-- footer -->
       <div class="container">
