--- a/content/版本二.html
+++ b/content/版本二.html
@@ -133,9 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄<br /><h1>球</h1>
-<p><img alt="" height="247" src="./../images/球.png" width="250"/></p>
-<br />球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
+    <div id="tipue_search_content">版本一 << <a href='版本一.html'>Previous</a> <a href='2.1.html'>Next</a> >> 2.1<br /><h1>版本二</h1>
+<br />版本一 << <a href='版本一.html'>Previous</a> <a href='2.1.html'>Next</a> >> 2.1</div>
         
     <!-- footer -->
       <div class="container">
