--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -43,7 +43,22 @@
 <p><a href="/downloads/2021-03_2a_stage.7z">2021-03_2a_stage.7z</a></p>
 <p><a href="/downloads/Ant Renamer.7z">Ant Renamer.7z</a></p>
 <h1>W5</h1>
-<h2>stage2-ag12</h2>
+<p>產品目標</p>
+<p>主題:籃球機 二代</p>
+<p></p>
+<p>動機:</p>
+<p>第一次小組產品的籃球機只能自己轉動無法控制，所以二代的籃球機目標增加案件控制轉動。</p>
+<p></p>
+<p>製作規劃:</p>
+<p>w5:確認主題，工作分配</p>
+<p></p>
+<p>w6:尋找lua程式與<span>coppeliaSim 文章</span>，並且使用lua程式控制軸在coppeliaSim裡模擬，籃球機外觀修整。</p>
+<p></p>
+<p>w7:完成按鍵控制程式與模擬<span>，籃球機外觀修整。</span></p>
+<p><span></span></p>
+<p>w8:除錯與修整，完成簡報與pdf</p>
+<p></p>
+<p>w9:報告</p><h2>stage2-ag12</h2>
 <p><a href="https://40823152.github.io/stage2-ag12/content/index.html">stage2-ag12</a></p>
 <p>組員</p>
 <p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span>|<span> </span></span><a href="http://40823152.github.io/cd2021">40823152 site</a><span><span> </span>|</span></p>
@@ -111,10 +126,12 @@
 </tr>
 </tbody>
 </table>
-</div>
-</div>
-<p><img alt="" height="261" src="https://40823125.github.io/stage2-ag12/images/Inked%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-04-01%20170231_LI.jpg" width="500"/></p>
-<h1>發球機版本</h1>
+<h1>Error exclude</h1>
+<h2>協同失誤</h2>
+<p>在協同時因為組員們的倉儲版本不同導致無法推送</p>
+<p><img alt="" height="113" src="https://localhost:8444/images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-04-13%20194559.jpg" width="500"/></p>
+<p>最後我們只好將版本不同的倉儲刪掉重新協同</p>
+<p><img alt="" height="261" src="https://40823125.github.io/stage2-ag12/images/Inked%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-04-01%20170231_LI.jpg" width="500"/></p><h1>發球機版本</h1>
 <h2>第1版</h2>
 <p><marquee behavior="alternate" bgcolor="#FF8CFF" direction="left" scrollamount="1" width="350"><a href="/downloads/組合件.stl">組合件.stl</a>|<a href="/downloads/球體.stl">球體.stl</a>|<a href="/downloads/主體.stl">主體.stl</a>|<a href="/downloads/球桶.stl">球桶.stl</a>|<a href="/downloads/引球圓盤.stl">引球圓盤.stl</a></marquee></p>
 <p><a href="https://drive.google.com/file/d/1RdYJgX-CONyUPgHzvj-qGBmiZoA7tIm9/view?usp=sharing">發射滾輪測試.ttt</a></p>
@@ -157,3 +174,44 @@
 <p><img alt="" height="328" src="/images/主體第2版.png" width="500"/></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/NF6CfldrYS0" width="560"></iframe></p>
 <h1>籃球機版本</h1>
+<h2>版本一</h2>
+<p><a href="https://drive.google.com/drive/folders/1GhgbMJbaKh2e0Zb0xjlF-sdGHJVy5C8D?usp=sharing">籃球機 1.4</a></p>
+<p><a href="https://drive.google.com/file/d/1vWfztZrbkWKIqTI-B5sKLRIM5YI0OJST/view?usp=sharing">coppeliaSim模擬:版本1.4</a></p>
+<p><span>因為版本2在</span><span>coppeliaSim裡被自動放大10倍，所以版本3無法擊中籃框，所以在<span>coppeliaSim裡</span>版本4放大10後就能擊中籃框。</span></p>
+<p><img alt="" height="350" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4.jpg" width="700"/></p>
+<p></p>
+<p>因為版本2在<span>coppeliaSim裡被自動放大10倍，所以版本3無法擊中籃框，所以版本4放大10後就能擊中籃框。</span></p>
+<p>可調性</p>
+<p><img caption="false" height="450" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4%E8%AA%BF%E5%B0%BA%E5%AF%B8%20.jpg" width="700"/></p>
+<p></p>
+<p><img caption="false" height="450" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4%E8%AA%BF%E5%B0%BA%E5%AF%B82%20.jpg" width="700"/></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/y-ztP91swPs" width="560"></iframe></p>
+<h2>版本二</h2>
+<h3>2.1</h3>
+<p><a href="https://drive.google.com/drive/folders/1wxw3JJsXfnXkaYdWfED0NG7M9g2PI26I?usp=sharing">籃球機2.1</a></p>
+<p><img alt="" height="239" src="/images/2.1-1.jpg" width="500"/></p>
+<p><img alt="" height="240" src="/images/2.1-2.jpg" width="500"/></p>
+<h3>2.2</h3>
+<p><a href="https://drive.google.com/drive/folders/1zqnQdyXmb-uHGltAk5lSACNNUaOuthIN?usp=sharing">籃球機2.2</a></p>
+<p><img alt="" height="237" src="/images/2.2-1.jpg" width="500"/></p>
+<p><img alt="" height="237" src="/images/2.2-2.jpg" width="500"/></p>
+<p><img alt="" height="239" src="/images/2.2-3.jpg" width="500"/></p>
+<p><img alt="" height="236" src="/images/2.2-4.jpg" width="500"/></p>
+<p><img alt="" height="238" src="/images/2.2-5.jpg" width="500"/></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/fPKHOBXYZwY" width="560"></iframe></p>
+<p></p>
+<h3>2.3</h3>
+<p><a href="https://drive.google.com/drive/folders/1gVL4FmbeqfpH1UVUGS85cwdQSOvvy683?usp=sharing">籃球機2.3</a></p>
+<p><img alt="" height="238" src="/images/2.3-1.jpg" width="500"/></p>
+<p><img alt="" height="238" src="/images/2.3-2.jpg" width="500"/></p>
+<p><span style="font-weight: 400;">CoppeliaSim v-rep 連桿運動問題</span></p>
+<p><span style="font-weight: 400;">一開始在CoppeliaSim上模擬發現模型無法順利地運轉</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/kpUwzR1XGkY" width="560"></iframe></p>
+<p><span style="font-weight: 400;">CoppeliaSim v-rep 連桿運動問題 解決</span></p>
+<p><span style="font-weight: 400;">後來才發現原來是尺寸的問題</span></p>
+<p><span style="font-weight: 400;">由於coppliasim對與尺寸可能無法到inventor那麼精準所以要預留空隙,才能順利運轉</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/97fUChcmisk" width="560"></iframe></p>
+<h3>2.4</h3>
+<p><a href="https://drive.google.com/drive/folders/1CCFrCBzbBhC9gnwaUUMYi5Cf7kd8Xkcz?usp=sharing">籃球機2.4</a></p>
+<p><img alt="" height="237" src="/images/2.4-1.jpg" width="500"/></p>
+<p><img alt="" height="237" src="/images/2.4-2.jpg" width="500"/></p></div></div>
