--- a/content/2.1.html
+++ b/content/2.1.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a><li><a href='PDF.html'>PDF</a></li></ul><li><a href='W4.html'>W4</a><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本四.html'>版本四</a></li>
+                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a><li><a href='PDF.html'>PDF</a></li></ul><li><a href='W4.html'>W4</a><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='產品目標.html'>產品目標</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li class='has-children'><a href='Error exclude.html'>Error exclude</a><ul class='dropdown'><li><a href='協同失誤.html'>協同失誤</a></li></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,20 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">籃球機版本 << <a href='籃球機版本.html'>Previous</a> <br /><h1>版本四</h1>
-<p><a href="https://drive.google.com/drive/folders/1GhgbMJbaKh2e0Zb0xjlF-sdGHJVy5C8D?usp=sharing">籃球機 4</a></p>
-<p><a href="https://drive.google.com/file/d/1vWfztZrbkWKIqTI-B5sKLRIM5YI0OJST/view?usp=sharing">coppeliaSim模擬:版本4</a></p>
-<p><span>因為版本2在</span><span>coppeliaSim裡被自動放大10倍，所以版本3無法擊中籃框，所以在<span>coppeliaSim裡</span>版本4放大10後就能擊中籃框。</span></p>
-<p><img alt="" height="350" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4.jpg" width="700"/></p>
-<p></p>
-<p>因為版本2在<span>coppeliaSim裡被自動放大10倍，所以版本3無法擊中籃框，所以版本4放大10後就能擊中籃框。</span></p>
-<p>可調性</p>
-<p><img caption="false" height="450" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4%E8%AA%BF%E5%B0%BA%E5%AF%B8%20.jpg" width="700"/></p>
-<p></p>
-<p><img caption="false" height="450" src="https://40823152.github.io/stage1-ag21/images/%E7%B1%83%E7%90%83%E6%A9%9F4%E8%AA%BF%E5%B0%BA%E5%AF%B82%20.jpg" width="700"/></p>
-<p></p>
-<p></p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/y-ztP91swPs" width="560"></iframe></p><br />籃球機版本 << <a href='籃球機版本.html'>Previous</a> </div>
+    <div id="tipue_search_content">版本二 << <a href='版本二.html'>Previous</a> <a href='2.2.html'>Next</a> >> 2.2<br /><h1>2.1</h1>
+<p><a href="https://drive.google.com/drive/folders/1wxw3JJsXfnXkaYdWfED0NG7M9g2PI26I?usp=sharing">籃球機2.1</a></p>
+<p><img alt="" height="239" src="./../images/2.1-1.jpg" width="500"/></p>
+<p><img alt="" height="240" src="./../images/2.1-2.jpg" width="500"/></p>
+<br />版本二 << <a href='版本二.html'>Previous</a> <a href='2.2.html'>Next</a> >> 2.2</div>
         
     <!-- footer -->
       <div class="container">
