--- a/content/2.3.html
+++ b/content/2.3.html
@@ -133,9 +133,18 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄<br /><h1>球</h1>
-<p><img alt="" height="247" src="./../images/球.png" width="250"/></p>
-<br />球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
+    <div id="tipue_search_content">2.2 << <a href='2.2.html'>Previous</a> <a href='2.4.html'>Next</a> >> 2.4<br /><h1>2.3</h1>
+<p><a href="https://drive.google.com/drive/folders/1gVL4FmbeqfpH1UVUGS85cwdQSOvvy683?usp=sharing">籃球機2.3</a></p>
+<p><img alt="" height="238" src="./../images/2.3-1.jpg" width="500"/></p>
+<p><img alt="" height="238" src="./../images/2.3-2.jpg" width="500"/></p>
+<p><span style="font-weight: 400;">CoppeliaSim v-rep 連桿運動問題</span></p>
+<p><span style="font-weight: 400;">一開始在CoppeliaSim上模擬發現模型無法順利地運轉</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/kpUwzR1XGkY" width="560"></iframe></p>
+<p><span style="font-weight: 400;">CoppeliaSim v-rep 連桿運動問題 解決</span></p>
+<p><span style="font-weight: 400;">後來才發現原來是尺寸的問題</span></p>
+<p><span style="font-weight: 400;">由於coppliasim對與尺寸可能無法到inventor那麼精準所以要預留空隙,才能順利運轉</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/97fUChcmisk" width="560"></iframe></p>
+<br />2.2 << <a href='2.2.html'>Previous</a> <a href='2.4.html'>Next</a> >> 2.4</div>
         
     <!-- footer -->
       <div class="container">
