--- a/content/2.4.html
+++ b/content/2.4.html
@@ -133,9 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄<br /><h1>球</h1>
-<p><img alt="" height="247" src="./../images/球.png" width="250"/></p>
-<br />球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
+    <div id="tipue_search_content">2.3 << <a href='2.3.html'>Previous</a> <br /><h1>2.4</h1>
+<p><a href="https://drive.google.com/drive/folders/1CCFrCBzbBhC9gnwaUUMYi5Cf7kd8Xkcz?usp=sharing">籃球機2.4</a></p>
+<p><img alt="" height="237" src="./../images/2.4-1.jpg" width="500"/></p>
+<p><img alt="" height="237" src="./../images/2.4-2.jpg" width="500"/></p></div></div><br />2.3 << <a href='2.3.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
