--- a/content/Error exclude.html
+++ b/content/Error exclude.html
@@ -133,9 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄<br /><h1>球</h1>
-<p><img alt="" height="247" src="./../images/球.png" width="250"/></p>
-<br />球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
+    <div id="tipue_search_content">Heroku 網站建立 << <a href='Heroku 網站建立.html'>Previous</a> <a href='協同失誤.html'>Next</a> >> 協同失誤<br /><h1>Error exclude</h1>
+<br />Heroku 網站建立 << <a href='Heroku 網站建立.html'>Previous</a> <a href='協同失誤.html'>Next</a> >> 協同失誤</div>
         
     <!-- footer -->
       <div class="container">
