--- a/content/協同失誤.html
+++ b/content/協同失誤.html
@@ -133,9 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄<br /><h1>球</h1>
-<p><img alt="" height="247" src="./../images/球.png" width="250"/></p>
-<br />球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
+    <div id="tipue_search_content">Error exclude << <a href='Error exclude.html'>Previous</a> <a href='發球機版本.html'>Next</a> >> 發球機版本<br /><h1>協同失誤</h1>
+<p>在協同時因為組員們的倉儲版本不同導致無法推送</p>
+<p><img alt="" height="113" src="https://localhost:8444/images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-04-13%20194559.jpg" width="500"/></p>
+<p>最後我們只好將版本不同的倉儲刪掉重新協同</p>
+<p><img alt="" height="261" src="https://40823125.github.io/stage2-ag12/images/Inked%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-04-01%20170231_LI.jpg" width="500"/></p><br />Error exclude << <a href='Error exclude.html'>Previous</a> <a href='發球機版本.html'>Next</a> >> 發球機版本</div>
         
     <!-- footer -->
       <div class="container">
