--- a/content/產品目標.html
+++ b/content/產品目標.html
@@ -133,9 +133,22 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄<br /><h1>球</h1>
-<p><img alt="" height="247" src="./../images/球.png" width="250"/></p>
-<br />球桶 << <a href='球桶.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
+    <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='stage2-ag12.html'>Next</a> >> stage2-ag12<br /><h1>產品目標</h1>
+<p>主題:籃球機 二代</p>
+<p></p>
+<p>動機:</p>
+<p>第一次小組產品的籃球機只能自己轉動無法控制，所以二代的籃球機目標增加案件控制轉動。</p>
+<p></p>
+<p>製作規劃:</p>
+<p>w5:確認主題，工作分配</p>
+<p></p>
+<p>w6:尋找lua程式與<span>coppeliaSim 文章</span>，並且使用lua程式控制軸在coppeliaSim裡模擬，籃球機外觀修整。</p>
+<p></p>
+<p>w7:完成按鍵控制程式與模擬<span>，籃球機外觀修整。</span></p>
+<p><span></span></p>
+<p>w8:除錯與修整，完成簡報與pdf</p>
+<p></p>
+<p>w9:報告</p><br />W5 << <a href='W5.html'>Previous</a> <a href='stage2-ag12.html'>Next</a> >> stage2-ag12</div>
         
     <!-- footer -->
       <div class="container">
