--- a/config/content.htm
+++ b/config/content.htm
@@ -1,10 +1,12 @@
-<h1>W1</h1>
+<h1>Stage1-ag14</h1>
+<p><a href="https://40823125.github.io/stage1-ag14/content/index.html">stage1-ag14</a></p>
+<h2>W1</h2>
 <p>1.建立倉儲</p>
 <p>2.尋找組員:</p>
 <p>40823125<span> </span><a href="https://github.com/40823125/cd2021">倉儲</a><span> </span><a href="https://40823125.github.io/cd2021/">網頁</a></p>
 <p>40823110 <a href="https://github.com/40823110/cd2021">倉儲</a><span><span> </span></span><a href="https://40823110.github.io/cd2021/">網頁</a></p>
 <p>40823132<span><span> </span><a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
-<h1>W2</h1>
+<h2>W2</h2>
 <p><strong>內容討論:</strong></p>
 <p><span>stage1-ag14 發球機</span></p>
 <p><strong>製作動機:</strong><br/><span>因為我們的組員裡有一個人是桌球社社長,他想要藉由發球機提供球員自主練習機會。</span></p>
@@ -19,31 +21,37 @@
 <p>製圖(Onshape)<span></span></p>
 <p>40823132:</p>
 <p></p>
-<h2>零件尺寸及示意圖</h2>
+<h3>零件尺寸及示意圖</h3>
 <p><a href="https://cad.onshape.com/documents/b2fd841cc0d0a0eab0afe5cc/w/650cd44a013042653d1b995f/e/c1547cd791f26bbfc4276762">球體</a><span>|</span><a href="https://cad.onshape.com/documents/5163181e2fe649a1d31dd674/w/4e88bfbfabd294ec7f2f2b4d/e/697be15fa1b7438b20521146">發球機主體</a><span>|</span><span><a href="https://cad.onshape.com/documents/e7f83d8dad44353fefca9ba8/w/c9bfde151271f69c6a6a2b1d/e/dfcfbb7a2da4266f925ff71c">球桶</a>|</span><span><a href="https://cad.onshape.com/documents/15e7b2b6610857fd978f626a/w/89c7066d9571d20450730429/e/4182c488ced799f50ceab2a3">引球圓盤</a></span></p>
-<h3>主體</h3>
+<h4>主體</h4>
 <p><img alt="" height="235" src="/images/主體-4.png" width="350"/></p>
 <p><img alt="" height="300" src="/images/主體-1.png" width="350"/></p>
 <p><img alt="" height="269" src="/images/主體-2.png" width="350"/></p>
 <p><img alt="" height="246" src="/images/主體-3.png" width="350"/></p>
-<h3>引球圓盤</h3>
+<h4>引球圓盤</h4>
 <p><img alt="" height="88" src="/images/引球圓盤-1.png" width="350"/></p>
 <p><img alt="" height="265" src="/images/引球圓盤-2.png" width="350"/></p>
 <p><img alt="" height="313" src="/images/引球圓盤-3.png" width="350"/></p>
-<h3>球桶</h3>
+<h4>球桶</h4>
 <p><img alt="" height="254" src="/images/球桶-1.png" width="350"/></p>
 <p><img alt="" height="322" src="/images/球桶-2.png" width="350"/></p>
-<h3>球</h3>
+<h4>球</h4>
 <p><img alt="" height="247" src="/images/球.png" width="250"/></p>
-<h2>分組開會紀錄</h2>
+<h3>分組開會紀錄</h3>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dLK8QT6gpw8" width="560"></iframe></p>
-<h1>W4</h1>
-<h2>PDF</h2>
+<h2>W4</h2>
+<h3>PDF</h3>
 <p><a href="/downloads/2021-協同產品設計實習-stage1-ag14.pdf">2021-協同產品設計實習-stage1-ag14.pdf</a></p>
-<p><a href="/downloads/2021-03_2a_stage.7z"></a></p>
-<h1>W5</h1>
+<h1>Stage2-ag12</h1>
+<p><a href="https://40823125.github.io/stage2-ag12/content/index.html">stage2-ag12</a></p>
+<p>組員</p>
+<p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span>|<span> </span></span><a href="http://40823152.github.io/cd2021">40823152 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span>|<span> </span></span><a href="http://40823125.github.io/cd2021">40823125 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a> |</p>
+<h2>W5</h2>
 <p><img alt="" height="803" src="/images/Screenshot 2021-04-15 155510.png" width="600"/></p>
-<h2>產品目標</h2>
+<h3>產品目標</h3>
 <p>主題:籃球機 二代</p>
 <p></p>
 <p>動機:</p>
@@ -59,16 +67,10 @@
 <p>w8:除錯與修整，完成簡報與pdf</p>
 <p></p>
 <p>w9:報告</p>
-<h2>stage2-ag12</h2>
-<p><a href="https://40823152.github.io/stage2-ag12/content/index.html">stage2-ag12</a></p>
-<p>組員</p>
-<p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span>|<span> </span></span><a href="http://40823152.github.io/cd2021">40823152 site</a><span><span> </span>|</span></p>
-<p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
-<p><span><span> </span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span>|<span> </span></span><a href="http://40823125.github.io/cd2021">40823125 site</a><span><span> </span>|</span></p>
-<p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a> |</p>
-<h1>W6</h1>
-<h1>W7</h1>
-<h2>Heroku 網站建立</h2>
+<p><a href="https://40823152.github.io/stage2-ag12/content/index.html"></a></p>
+<h2>W6</h2>
+<h2>W7</h2>
+<h3>Heroku 網站建立</h3>
 <p><a href="https://stage2-ag12.herokuapp.com/content/index.html">stage2-ag12-heroku網站</a></p>
 <p><strong>1.開通 Heroku 帳號(用學校email建立)</strong></p>
 <p><strong>2.建立一個 Herokuapp</strong></p>
