--- a/content/stage2-ag12.html
+++ b/content/stage2-ag12.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='PDF.html'>PDF</a></li></ul><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='產品目標.html'>產品目標</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li class='has-children'><a href='Error exclude.html'>Error exclude</a><ul class='dropdown'><li><a href='協同失誤.html'>協同失誤</a></li></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li>
+                     <li class='has-children'><a href='Stage1-ag14.html'>Stage1-ag14</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='PDF.html'>PDF</a></li></li></ul></ul><li class='has-children'><a href='Stage2-ag12.html'>Stage2-ag12</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='產品目標.html'>產品目標</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></li></ul></ul><li class='has-children'><a href='Error exclude.html'>Error exclude</a><ul class='dropdown'><li><a href='協同失誤.html'>協同失誤</a></li></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,14 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">產品目標 << <a href='產品目標.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>stage2-ag12</h1>
-<p><a href="https://40823152.github.io/stage2-ag12/content/index.html">stage2-ag12</a></p>
+    <div id="tipue_search_content">PDF << <a href='PDF.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>Stage2-ag12</h1>
+<p><a href="https://40823125.github.io/stage2-ag12/content/index.html">stage2-ag12</a></p>
 <p>組員</p>
 <p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span>|<span> </span></span><a href="http://40823152.github.io/cd2021">40823152 site</a><span><span> </span>|</span></p>
 <p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
 <p><span><span> </span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span>|<span> </span></span><a href="http://40823125.github.io/cd2021">40823125 site</a><span><span> </span>|</span></p>
 <p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a> |</p>
-<br />產品目標 << <a href='產品目標.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
+<br />PDF << <a href='PDF.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
         
     <!-- footer -->
       <div class="container">
