--- a/content/零件尺寸及示意圖.html
+++ b/content/零件尺寸及示意圖.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><ul class='dropdown'><li><a href='主體.html'>主體</a><li><a href='引球圓盤.html'>引球圓盤</a><li><a href='球桶.html'>球桶</a><li><a href='球.html'>球</a></li></ul><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='PDF.html'>PDF</a></li></ul><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='產品目標.html'>產品目標</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li class='has-children'><a href='Error exclude.html'>Error exclude</a><ul class='dropdown'><li><a href='協同失誤.html'>協同失誤</a></li></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li>
+                     <li class='has-children'><a href='Stage1-ag14.html'>Stage1-ag14</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='PDF.html'>PDF</a></li></li></ul></ul><li class='has-children'><a href='Stage2-ag12.html'>Stage2-ag12</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='產品目標.html'>產品目標</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></li></ul></ul><li class='has-children'><a href='Error exclude.html'>Error exclude</a><ul class='dropdown'><li><a href='協同失誤.html'>協同失誤</a></li></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,23 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='主體.html'>Next</a> >> 主體<br /><h1>零件尺寸及示意圖</h1>
+    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄<br /><h1>零件尺寸及示意圖</h1>
 <p><a href="https://cad.onshape.com/documents/b2fd841cc0d0a0eab0afe5cc/w/650cd44a013042653d1b995f/e/c1547cd791f26bbfc4276762">球體</a><span>|</span><a href="https://cad.onshape.com/documents/5163181e2fe649a1d31dd674/w/4e88bfbfabd294ec7f2f2b4d/e/697be15fa1b7438b20521146">發球機主體</a><span>|</span><span><a href="https://cad.onshape.com/documents/e7f83d8dad44353fefca9ba8/w/c9bfde151271f69c6a6a2b1d/e/dfcfbb7a2da4266f925ff71c">球桶</a>|</span><span><a href="https://cad.onshape.com/documents/15e7b2b6610857fd978f626a/w/89c7066d9571d20450730429/e/4182c488ced799f50ceab2a3">引球圓盤</a></span></p>
-<br />W2 << <a href='W2.html'>Previous</a> <a href='主體.html'>Next</a> >> 主體</div>
+<h4>主體</h4>
+<p><img alt="" height="235" src="./../images/主體-4.png" width="350"/></p>
+<p><img alt="" height="300" src="./../images/主體-1.png" width="350"/></p>
+<p><img alt="" height="269" src="./../images/主體-2.png" width="350"/></p>
+<p><img alt="" height="246" src="./../images/主體-3.png" width="350"/></p>
+<h4>引球圓盤</h4>
+<p><img alt="" height="88" src="./../images/引球圓盤-1.png" width="350"/></p>
+<p><img alt="" height="265" src="./../images/引球圓盤-2.png" width="350"/></p>
+<p><img alt="" height="313" src="./../images/引球圓盤-3.png" width="350"/></p>
+<h4>球桶</h4>
+<p><img alt="" height="254" src="./../images/球桶-1.png" width="350"/></p>
+<p><img alt="" height="322" src="./../images/球桶-2.png" width="350"/></p>
+<h4>球</h4>
+<p><img alt="" height="247" src="./../images/球.png" width="250"/></p>
+<br />W2 << <a href='W2.html'>Previous</a> <a href='分組開會紀錄.html'>Next</a> >> 分組開會紀錄</div>
         
     <!-- footer -->
       <div class="container">
